# analysis_20Nedn

./: CMakeLists.txt  Hagrid_Calibration_Parameters.txt  Hagrid_Co60_Peaks.txt  LinkDefanalysis_20Nedn.h  Ne20_histogramReader.cpp  README.md  TOF_GammaPeaks.txt  analysis_20Nedn.cpp  analysis_20Nedn.h  analysis_20NednRun.cpp  end_of_exp_post_calibrations.txt  gates_Run50.root  geometry_e20003.txt  hagridCalibration.cxx  singleRunTOF_shifting_20Ne.cpp
config_files/: Config_11Mods.xml  Config_11Mods_labr_stb.xml  Config_11Mods_labr_stb_EBIT.xml  Config_online_LogicProcessor.xml  NEXT_config.xml  allFilesScan.sh  multiscan.sh
